Fixed issue with trashcan not showing up for RelativeIntentionView

--- a/leaf-ui/css/analysis_style.css
+++ b/leaf-ui/css/analysis_style.css
@@ -375,7 +375,7 @@ select::-ms-expand {
     cursor: pointer;
   }
 
-#removeIntention{
+#removeConstraint{
     cursor: pointer;
 }
 
